--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -2,12 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ureaqa.ureaqamobile">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <!--
+    To auto-complete the email text field in the login form with the user's emails
+
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    -->
+
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -15,6 +21,7 @@
 
 
     <uses-feature android:name="android.hardware.bluetooth_le" />
+    -->
 
     <application
         android:allowBackup="true"
@@ -25,7 +32,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,11 +41,13 @@
         </activity>
         <activity
             android:name=".RegisterActivity"
-            android:label="Register"/>
+            android:label="Register"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".MainActivity"
-            android:label="Results"/>
+            android:label="Ureaqa Mobile"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
